--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,11 @@ dynamic = ["version"]
 [project.scripts]
 monofy = "monofy.scripts.monofy:main"
 
+[project.urls]
+homepage = "https://www.bugsink.com/blog/multi-process-docker-images/"
+repository = "https://github.com/bugsink/monofy"
+issues = "https://github.com/bugsink/monofy/issues"
+
 [tool.setuptools]
 include-package-data = true  # this is the default, but explicit is better than implicit
 
@@ -32,7 +37,3 @@ include = [
 ]
 
 exclude = []  # exclude packages matching these glob patterns (empty by default)
-
-[project.urls]
-"Homepage" = "https://github.com/bugsink/monofy"
-"Bug Reports" = "https://github.com/bugsink/monofy/issues"
